New font imported, icon block + check function added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
                 <input placeholder="Do More !" id="input-task">
                 <button id="add-task-button">Add Task</button>
             </div>
+            <div id="no-tasks-yet">
+                <div>
+                    <img src="assets/img/checklist-icon.svg" alt="checklist icon">
+                </div>
+                <p>What do you want to get done today?</p>
+            </div>
             <ul id="task-list">
 
             </ul>
