--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>To-Do List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <container>
         <div class="content">
             <h1 id="main-title">To Do List</h1>
-            <div class="new-task-block">
+            <div class="new-task-block animate__animated animate__fadeIn">
                 <input placeholder="Do More !" id="input-task">
                 <button id="add-task-button">Add Task</button>
             </div>
-            <div id="no-tasks-yet">
+            <div id="no-tasks-yet" class="animate__animated animate__fadeIn">
                 <div>
                     <img src="assets/img/checklist-icon.svg" alt="checklist icon">
                 </div>
